INCLUDES                =  -I$(top_builddir) -I$(top_srcdir)
bin_PROGRAMS		=  drinkduino
drinkduino_SOURCES	=  drinkduino.cpp serial.cpp sql.cpp gui.cpp \
		gamedata.cpp drinkshield.cpp player.cpp score.cpp \
		scrollbar.cpp profilepic.cpp
noinst_HEADERS		=  drinkduino.h serial.h sql.h gui.h gamedata.h \
		drinkshield.h player.h score.h scrollbar.h profilepic.h

