imagedir=$(data_path)/images

dist_image_DATA = abortbtn.png \
             addPlayer1.png \
             addUser1.png \
             anon.jpg \
             bg1-on.png \
             bg1.png \
             friends-icon-sm.png \
             gears.png \
             guy.png \
             scoredlg.png \
             splashscreen.jpg \
             statusbar1.png

EXTRA_DIST = $(image_DATA)

