INCLUDES                =  -I$(top_builddir) -I$(top_srcdir)
bin_PROGRAMS		=  drinkduino
drinkduinogamedir	= $(data_path)
drinkduino_SOURCES	=  drinkduino.cpp serial.cpp sql.cpp gui.cpp \
		gamedata.cpp drinkshield.cpp player.cpp score.cpp \
		scrollbar.cpp profilepic.cpp camera.cpp countdowntimer.cpp \
		event.cpp
noinst_HEADERS		=  drinkduino.h serial.h sql.h gui.h gamedata.h \
		drinkshield.h player.h score.h scrollbar.h profilepic.h \
		camera.h countdowntimer.h event.h

